# purple

./: Cargo.toml  DESIGN.md  playground.purple
proptest-regressions/: parser.txt
src/: compiler.rs  diagnostic.rs  main.rs  parser.rs  typechecker.rs  value.rs
