[package]
name = "purple"
version = "0.1.0"
authors = ["Purple Myst <PurpleMyst@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.0.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm7-0" }

[dev-dependencies]
proptest = "0.9.4"
